--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfólio de Desenvolvimento Web</title>
+        <title>Portfólio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header></header>
         <main>
             <h1>Portfólio <strong class="titulo-destaque">PowerBI</strong></h1>
             <p>Projetos desenvolvidos em powerbi, com intuito de apresentar KPIs de determinadas empresas, para auxiliar na tomada de decisão...</p>
