Estilizando com CSS pt_02

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     </head>
     <body>
         <header></header>
-        <main>
-            <h1>Portfólio <strong class="titulo-destaque">PowerBI</strong></h1>
-            <p>Projetos desenvolvidos em powerbi, com intuito de apresentar KPIs de determinadas empresas, para auxiliar na tomada de decisão...</p>
-            <a href="https://www.google.com.br/?hl=pt-BR">Github</a>
+        <main class="apresentacao">
             <img src="PBI.jpg" alt="Brand Power BI">
-            <ul>
-                <li>Dashboard Departamento Comercial</li>
-                <li>Dashboard Departamento de Logistica</li>
-                <li>Dashboard Operação Call Center</li>
-            </ul>
+            <section class="apresentacao__conteudo">
+                <h1 class="apresentacao__conteudo__titulo">Portfólio <strong class="titulo-destaque">PowerBI</strong></h1>
+                <p class="apresentacao__conteudo__paragrafo">Projetos desenvolvidos em powerbi, com intuito de apresentar KPIs de determinadas empresas, para auxiliar na tomada de decisão...</p>
+                <ul>
+                    <li>Dashboard Departamento Comercial</li>
+                    <li>Dashboard Departamento de Logistica</li>
+                    <li>Dashboard Operação Call Center</li>
+                </ul>
+                <div class="apresentacao__link">
+                    <a class="apresentacao_link_link" href="https://www.google.com.br/?hl=pt-BR">Saiba Mais</a>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </body>
