Estilizando com CSS pt_03

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <body>
         <header></header>
         <main class="apresentacao">
-            <img src="PBI.jpg" alt="Brand Power BI">
-            <section class="apresentacao__conteudo">
-                <h1 class="apresentacao__conteudo__titulo">Portfólio <strong class="titulo-destaque">PowerBI</strong></h1>
+            <h1 class="apresentacao__conteudo__titulo">Portfólio <strong class="titulo-destaque">PowerBi</strong></h1>
+            <section class="apresentacao__conteudo">                
                 <p class="apresentacao__conteudo__paragrafo">Projetos desenvolvidos em powerbi, com intuito de apresentar KPIs de determinadas empresas, para auxiliar na tomada de decisão...</p>
                 <ul>
                     <li>Dashboard Departamento Comercial</li>
